Added some commands

--- a/src/Bot/utils/Languages/english.json
+++ b/src/Bot/utils/Languages/english.json
@@ -142,5 +142,39 @@
   "ChannelMentionIsRequired": "> You need to mention a channel.",
   "RestrictedAllCommandsToAChannel": "> Restricted `{commandsAmount}` commands to {channel}.",
   "ChannelIsAlreadyInCommandRestricts": "> This channel is already in the command restricts.",
-  "CommandGotRestricted": "> Restricted `{commandName}` command to {channel}."
+  "CommandGotRestricted": "> Restricted `{commandName}` command to {channel}.",
+  "MemberRoleAdded": "> Added the role `{role}` for the member `{member}`.",
+  "MemberHasTheRole": "> This member has the role already.",
+  "RoleColorUpdated": "> The role color got updated.",
+  "MuteRoleNotFound": "> The mute role was not found.",
+  "MuteRoleGotSet": "> The mute role has been set to `{roleName}`",
+  "NicknameGotChanged": "> The nickname has been changed.",
+  "PrefixIsRequired": "> You need to enter the prefix.",
+  "PrefixHasBeenUpdated": "> The prefix has been set to `{prefix}`",
+  "MemberToUnbanIsRequired": "> You need to enter the member you want to unban.",
+  "UserNotFound": "> Couldn't find that user.",
+  "MemberIsNotBanned": "> Couldn't find that user in the server's banned members list.",
+  "MemberIsUnbanned": "> You have been unbanned from `{guild}` By: `{by}`",
+  "MemberIsNotMuted": "> This member is not muted.",
+  "RemovedMuteRoleFromMember": "> The member `{member}` has been unmuted.",
+  "ChannelDoesNotExistInTheList": "> This channel doesn't exist in the list.",
+  "RemovedAllCommandsFromRestricts": "> Removed restricts from {channel} for {commands} commands.",
+  "RemovedAllCommandsFromRestrictsWithoutChannels": "> Removed restricts from {commands} commands.",
+  "RemovedChannelFromCommandRestrict": "> Removed {channel} from {commandName} restricts.",
+  "RemovedRestrictsFromCommand": "> Removed restricts from {commandName} command.",
+  "MemberIsNotInAVoiceChannel": "> This member is not in a voice channel.",
+  "MemberGotKickedFromAVoiceChannel": "> {member} has been kicked from the voice channel.",
+  "NoReason": "No Reason",
+  "MemberGotWarned": "> `{member}` has been warned for `{reason}` and has `{warns}` warns currently.",
+  "For": "For",
+  "MemberWarnsList": "{user}'s Warns List",
+  "ChannelNotFound": "> Coulnd't find that channel.",
+  "NoDescription": "No Description.",
+  "At": "At",
+  "MemberNeedsToPassArgumentsForAIChat": "> You need to send the channel of the ai chat or type default if you want to remove it.",
+  "MemberNeedsToMentionAChannel": "> You need to mention a channel.",
+  "TheChannelNeedsToBeInTheSameServer": "> The channel needs to be in the same server.",
+  "TextChannelRequired": "> Text Channel Required.",
+  "TheAIChatChannelHasBeenUpdated": "> The AI Chat Channel has been updated.",
+  "TheAIChatChannelHasBeenRestedToDefault": "The ai chat channel has been rested to default (no channels)!"
 }
