--- a/src/Bot/utils/Languages/english.json
+++ b/src/Bot/utils/Languages/english.json
@@ -176,5 +176,30 @@
   "TheChannelNeedsToBeInTheSameServer": "> The channel needs to be in the same server.",
   "TextChannelRequired": "> Text Channel Required.",
   "TheAIChatChannelHasBeenUpdated": "> The AI Chat Channel has been updated.",
-  "TheAIChatChannelHasBeenRestedToDefault": "The ai chat channel has been rested to default (no channels)!"
+  "TheAIChatChannelHasBeenRestedToDefault": "The ai chat channel has been rested to default (no channels)!",
+  "Episode": "Episode",
+  "Name": "Name",
+  "JapaneseName": "Japanese Name",
+  "Aired": "Aired",
+  "EpisodesListTitle": "{animeName} Episodes list",
+  "DataFromAnimeList": "Data from MyAnimeList.net",
+  "LatestAnimeNews": "Latest Anime News",
+  "EnterAnimeNameToSearchAbout": "> Enter anime name to search about.",
+  "NoAnimeFound": "> Couldn't find any anime with the provided name.",
+  "OtherNames": "Other Names",
+  "English": "English",
+  "Japanese": "Japanese",
+  "Studios": "Studios",
+  "Producers": "Producers",
+  "Episodes": "Episodes",
+  "Length": "Length",
+  "Premiered": "Premiered",
+  "Status": "Status",
+  "Broadcast": "Broadcast",
+  "Rating": "Rating",
+  "Genres": "Genres",
+  "Score": "Score",
+  "WorldRank": "World Rank",
+  "Popularity": "Popularity",
+  "AnimeFavBy": "Favorite by {favorites} people | data from MyAnimeList.net"
 }
