--- a/src/Bot/utils/Languages/english.json
+++ b/src/Bot/utils/Languages/english.json
@@ -201,5 +201,31 @@
   "Score": "Score",
   "WorldRank": "World Rank",
   "Popularity": "Popularity",
-  "AnimeFavBy": "Favorite by {favorites} people | data from MyAnimeList.net"
+  "AnimeFavBy": "Favorite by {favorites} people | data from MyAnimeList.net",
+  "Developer": "Developer",
+  "MemberNeedsToEnterTheMangaName": "> You need to enter the manga name to search about it.",
+  "MangaNotFound": "> Manga wasn't found.",
+  "EnglishTitleNotFound": "English title was not found.",
+  "JapaneseTitleWasNotFound": "Japanese title was not found.",
+  "CanonTitleWasNotFound": "Canon title was not found.",
+  "NoSynopsisFound": "No Synopsis were found.",
+  "Unknown": "Unknown",
+  "EnglishJP": "English JP",
+  "EpisodesCount": "episodes",
+  "EpisodeLength": "Episode length",
+  "Minutes": "Minutes",
+  "TotalLength": "Total Length",
+  "StartDate": "Start Date",
+  "EndDate": "End Date",
+  "AgeRatingGuide": "Age Rating Guide",
+  "DataFrom": "Data from {source}.",
+  "BirthdayWasNotFound": "Couldn't find birthday for `{user}`.",
+  "Member'sBirthday": "The birthday for `{user}` is `{birthday}`",
+  "GettingBirthdays": "Getting Birthdays...",
+  "MemberDidNotEnterDayAndMonthInTheSetBirthdayCommand": "> Please enter a correct syntax. for example: `{prefix}set-birthday 29 11` (DD MM) or `{prefix}set-birthday 29 11 2003` (DD MM YYYY).",
+  "InvalidDay": "> Provide a correct day baka.",
+  "InvalidMonth": "> Provide a correct month baka.",
+  "MemberIsLessThan13YearsOld": "> You need to be +13 to use discord.",
+  "MemberIsMoreThan50YearsOld": "> Nobody who's +50 years old uses discord bruh.",
+  "BirthdayHasBeenUpdated": "> {member} Your birthday has been updated."
 }
