--- a/src/Bot/utils/Languages/english.json
+++ b/src/Bot/utils/Languages/english.json
@@ -243,5 +243,63 @@
   "LevelHasBeenUpdated": "> The level has been updated.",
   "NewXPIsRequired": "> You need to pass the new xp.",
   "NewXPMustBeANumber": "> The new xp must be a number.",
-  "XPHasBeenUpdated": "> XP has been updated."
+  "XPHasBeenUpdated": "> XP has been updated.",
+  "GenerateEmbedTitle": "> Enter the embed title.\nYou can type `none` if you don't need any title.",
+  "GenerateEmbedImage": "> Enter the embed image.(URL or upload new one with your message).",
+  "GenerateEmbedDescription": "> Enter the embed description (Details).\nYou can type `none` if you don't need any.",
+  "GenerateEmbedColor": "> Enter the embed color.",
+  "EditEmbedChannel": "> Enter the channel that the old embed is in.",
+  "EditEmbedMessageID": "> Enter the old message id that has the embed.",
+  "GenerateEmbedChannelIsMissing": "> You need to send the channel in your message.",
+  "EditEmbedFinalEmbedTitle": "> This is the final embed, react to the message to edit it.",
+  "GenerateEmbedFinalEmbedTitle": "> This is the final embed, react to the message to send it.",
+  "EditEmbedFinalMessage": "> The embed has been edited.",
+  "GenerateEmbedFinalMessage": "> The embed has been sent.",
+  "GenerateEmbedChannel": "> Enter the channel you want to send the embed in.",
+  "GameHasAlreadyStarted": "> {error-emoji} | The game has already started.",
+  "AkinatorEmbedTitle": "{author}, Question {question}",
+  "AkinatorThisIsYourCharacter": "This is your character, Right?",
+  "RankingAs": "Ranking as",
+  "AkinatorBotIsTheWinner": "{emoji} I am the winner!",
+  "AkinatorMemberIsTheWinner": " {emoji} Okay, You won this time, congratulations!",
+  "Question": "Question",
+  "CharacterNotFound": "> Couldn't find that character.",
+  "Stars": "Stars",
+  "Element": "Element",
+  "Weapon": "Weapon",
+  "SubStat": "SubStat",
+  "Gender": "Gender",
+  "Region": "Region",
+  "Affiliation": "Affiliation",
+  "Birthday": "Birthday",
+  "Constellation": "Constellation",
+  "TalentMaterial": "Talen Material",
+  "TalentNotFound": "> Couldn't find that talent.",
+  "Info": "Info",
+  "Attributes": "Attributes",
+  "GiveawayMessageIDIsRequired": "> You need to enter the giveaway message ID.",
+  "GiveawayDeleted": "> Success! Giveaway deleted!",
+  "NoGiveawayWasFound": "> No giveaway was found for the message id: `{messageId}`, Please check and try again.",
+  "GiveawayTitle": "🎉🎉 New **GIVEAWAY** 🎉🎉",
+  "GiveawayEnded": "🎉🎉 **GIVEAWAY ENDED** 🎉🎉",
+  "GiveawayRemainingTime": "Time remaining: **{duration}**",
+  "GiveawayReactMessage": "React with 🎉 to participate!",
+  "GiveawayWinMessage": "Congratulations, {winners}! You won **{prize}**!\n{messageURL}",
+  "GiveawayEmbedFooter": "{clientUsername} Giveaways System",
+  "GiveawayCanceled": "Giveaway cancelled, no valid participations.",
+  "GiveawayHostedBy": "Hosted by: {user}",
+  "Winners": "winner(s)",
+  "EndedAt": "Ended At",
+  "Seconds": "Seconds",
+  "Hours": "Hours",
+  "Days": "Days",
+  "EditGiveawaySuccess": "Success! Giveaway will updated in less than {secs} seconds.",
+  "GiveawayRerolled": "> Success! Giveaway rerolled!",
+  "GiveawayTimeIsMissing": "> You need to send the time as 2nd argument.\nExample: {prefix}start-giveaway #channel 2d 1 Awesome prize!",
+  "GiveawayWinnerCountIsMissing": "> You need to send the winners count as the 3rd argument!",
+  "GiveawayPrizeIsMissing": "You need to send the prize.\nExample: {prefix}start-giveaway #channel 2d 1 Awesome prize!",
+  "GiveawayStarted": "> The giveaway has started in {channel} with those settings:\n> Time: {remainingTime}\n> Winners Count: {winnersCount}\n> Prize: {prize}",
+  "NoGiveawayChannelFound": "> You need to enter the giveaway channel as the first argument!",
+  "RoleAlreadyExistsInTheDatabase": "> This role already exists in the database.",
+  "AddedNewBotJoinRole": "> `{role}` with the id `{id}` has been added to the bots join roles list."
 }
