--- a/src/Bot/utils/Languages/english.json
+++ b/src/Bot/utils/Languages/english.json
@@ -311,5 +311,24 @@
   "MemberAutoJoinRole": "Member Auto Join Roles",
   "MemberAutoJoinRolesDescsription": "Those roles are only gonna be added to members when they join! New bots won't have those roles!",
   "RemovedBotJoinRole": "> `{role}` with the id `{id}` has been removed from the bots join roles list.",
-  "RemovedMemberJoinRole": "> `{role}` with the id `{id}` has been removed from the members join roles list."
+  "RemovedMemberJoinRole": "> `{role}` with the id `{id}` has been removed from the members join roles list.",
+  "ChannelAlreadyInTheLevelsList": "> This channel is already in the level channels list.",
+  "AddedLevelChannel": "> {channel} has been added to the channels that count exp for members.",
+  "AddLevelRolesWrongSyntax": "> You need to pass in the level first then the role.",
+  "LevelRolesUpdated": "> Added `{role}` as a level role for the level `{level}`.",
+  "AddVoiceLevelRolesWrongSyntax": "> The voice level must be in this format: 5m| 5h | 5d | 30h etc!",
+  "ChannelDoesNotExistInTheLevelChannels": "> This channel doesn't exist in the level channels list!",
+  "RemovedLevelChannel": "> {channel} has beeen removed from the level channels list.",
+  "LevelSystemIsAlreadyDisabled": "> The level system is already disabled.",
+  "LevelSystemGotDisabled": "> The level system has been disabled.",
+  "LevelSystemIsAlreadyEnabled": "> Level system is already enabled.",
+  "LevelSystemGotEnabled": "> The level system has been enabled.",
+  "NoRanksWereFound": "> No ranks were found in the database.",
+  "ServerLeaderboardList": "{guild} leaderboard list",
+  "Exp": "Exp",
+  "Level": "Level",
+  "NoLevelChannelsFound": "Couldn't find any level channels! Level system is gonna work in all the channels.\nUse disable-level-system command to disable the levels.",
+  "LevelChannels": "Level Channels",
+  "LevelChannelsDescription": "The channels that level system can work in!\nOther channels won't give xp!",
+  "NoLevelRolesWereFound": "> No level roles were found in the database."
 }
