--- a/src/Bot/utils/Languages/english.json
+++ b/src/Bot/utils/Languages/english.json
@@ -451,5 +451,151 @@
 	"edit-embed_description": "Edits an embed that is sent by the bot (using embed command).",
 	"edit-embed_usage": "{prefix}edit-embed (a guide will take you through the embed details).",
 	"embed_description": "Generates and sends an embed to a channel.",
-	"embed_usage": "{prefix}embed (a guide will take you through the embed details)."
+	"embed_usage": "{prefix}embed (a guide will take you through the embed details).",
+	"ship_description": "Ships 2 members depends on the number of times they used the role playing commands.",
+	"ship_usage": "{prefix}ship @someone or {prefix}ship @first member @2nd member",
+	"akinator_description": "Starts the akinator game (it gets what you are thinking of).",
+	"akinator_usage": "{prefix}akinator",
+	"genshin-character_description": "Gets the details of genshin characters.",
+	"genshin-character_usage": "{prefix}genshin-character character name",
+	"genshin-talent_description": "Gets the details of a talent in genshin impact.",
+	"genshin-talent_usage": "{prefix}genshin-talent talent name",
+	"delete-giveaway_description": "Deletes a giveaway from the bot, note that removing the giveaway message won't stop the giveaway since the message is only display of the giveaway details, that's why this command exists.",
+	"delete-giveaway_usage": "{prefix}delete-giveaway message id",
+	"edit-giveaway_description": "Edits a giveaway in the bot.",
+	"edit-giveaway_usage": "{prefix}edit-giveaway [old giveaway message id] [time] [winner count] [prize] and ofc without the [].",
+	"end-giveaway_description": "Ends a giveaway in the bot.",
+	"end-giveaway_usage": "{prefix}end-giveaway message id",
+	"reroll-giveaway_description": "Re-rolls the giveaway winners.",
+	"reroll-giveaway_usage": "{prefix}reroll-giveaway message id",
+	"start-giveaway_description": "Starts a giveaway in the server.",
+	"start-giveaway_usage": "{prefix}start-giveaway [channel] [time] [winner count] [prize] without the [] ofc",
+	"add-bot-join-role_description": "Adds a role to the bots once they join the server (won't effect the normal members, only for bots).",
+	"add-bot-join-role_usage": "{prefix}add-bot-join-role role",
+	"add-member-join-role": "Adds a role to the members once they join the server (only for members, this won't add the role for bots).",
+	"add-member-join-role_usage": "{prefix}add-member-join-role role",
+	"bot-join-roles_description": "Shows the bot join roles (roles that are gonna be given to bots once they join the server).",
+	"bot-join-roles_usage": "{prefix}bot-join-roles",
+	"member-join-roles_description": "Shows the member join roles (roles that are gonna be given to members once they join the server).",
+	"member-join-roles_usage": "{prefix}member-join-roles",
+	"remove-bot-join-role_description": "Removes a bot join role from the database.",
+	"remove-bot-join-role_usage": "{prefix}remove-bot-join-role role",
+	"remove-member-join-role_description": "Removes a member join role from the database.",
+	"remove-member-join-role_usage": "{prefix}remove-member-join-role role",
+	"add-level-channel_description": "Adds a levelling channel (bot will only count xp there if some channels are set up, if not then it's gonna count in every single channel).",
+	"add-level-channel_usage": "{prefix}add-level-channel #channel",
+	"add-level-role_description": "Adds a level role (once the members hit the selected level they'll get the saved role automatically).",
+	"add-level-role_usage": "{prefix}add-level-role [level] [role] without the [].",
+	"add-voice-level-channel_description": "Adds a voice level channel (bot will count the speaking time and give members levels).",
+	"add-voice-level-channel_usage": "{prefix}add-voice-level-channel channel",
+	"add-voice-level-role_description": "Adds a voice level role (once the members hit the selected level they'll get the saved role automatically).",
+	"add-voice-level-role_usage": "{prefix}add-voice-level-role [level (13d etc)] [role] without the [].",
+	"delete-level-channel_description": "Deletes a level channel from the database.",
+	"delete-level-channel_usage": "{prefix}delete-level-channel #channel",
+	"delete-voice-level-channel_description": "Deletes a voice level channel from the database.",
+	"delete-voice-level-channel_usage": "{prefix}delete-voice-level-channel #channel/id/name",
+	"disable-level-system_description": "Disables the level system from running.",
+	"disable-level-system_usage": "{prefix}disable-level-system",
+	"enable-level-system_description": "Enables the level system.",
+	"enable-level-system_usage": "{prefix}enable-level-system",
+	"leaderboard_description": "Shows the rank leaderboard (top members who chat in the server).",
+	"leaderboard_usage": "{prefix}leaderboard",
+	"level-channels_description": "Shows the levelling channels of the server.",
+	"level-channels_usage": "{prefix}level-channels",
+	"level-roles_description": "Shows the level roles of the server.",
+	"level-roles_usage": "{prefix}level-roles",
+	"max-xp_description": "Shows/edits the max xp of the levels system.",
+	"max-xp_usage": "{prefix}max-xp or {prefix}max-xp [number]",
+	"min-xp_description": "Shows/edits the min xp of the levels system.",
+	"min-xp_usage": "{prefix}min-xp or {prefix}min-xp [number]",
+	"profile_description": "Generates a profile card for a member.",
+	"profile_usage": "{prefix}profile or {prefix}profile @someone",
+	"rank_description": "Generates a rank card for a member.",
+	"rank_usage": "{prefix}rank or {prefix}rank @someone",
+	"rank-background_description": "Changes the background of your profile/rank card.",
+	"rank-background_usage": "{prefix}rank-background (and upload an image with your message).",
+	"remove-level-role_description": "Removes a level role from the database.",
+	"remove-level-role_usage": "{prefix}remove-level-role [level] without the [].",
+	"remove-voice-level-role_description": "Removes a voice level role from the database.",
+	"remove-voice-level-role_usage": "{prefix}remove-voice-level-role [level] without the [].",
+	"voice-leaderboard_description": "Shows the voice leaderboard of the server. (top members to talk in the voice channels).",
+	"voice-leaderboard_usage": "{prefix}voice-leaderboard",
+	"voice-level-channels_description": "Shows the voice level channels.",
+	"voice-level-channels_usage": "{prefix}voice-level-channels",
+	"voice-level-roles_description": "Shows the voice level roles of the server.",
+	"voice-level-roles_usage": "{prefix}voice-level-roles",
+	"voice-rank_description": "Shows the voice rank of a member.",
+	"voice-rank_usage": "{prefix}voice-rank or {prefix}voice-rank @someone",
+	"all-logs_description": "Changes the log channels for all of the log types.",
+	"all-logs_usage": "{prefix}all-logs #channel",
+	"boost-logs_description": "Changes the log channel for boosts.",
+	"boost-logs_usage": "{prefix}boost-logs #channel",
+	"channel-logs_description": "Changes the log channel for channels edits.",
+	"channel-logs_usage": "{prefix}channel-logs #channel",
+	"server-logs_description": "Changes the log channel for server edits.",
+	"server-logs_usage": "{prefix}server-logs #channel",
+	"member-logs_description": "Changes the log channel for member updates.",
+	"member-logs_usage": "{prefix}member-logs #channel",
+	"role-logs_description": "Changes the log channel for role edits.",
+	"role-logs_usage": "{prefix}role-logs #channel",
+	"voice-logs_description": "Changes the log channel for voice logs.",
+	"voice-logs_usage": "{prefix}voice-logs #channel",
+	"message-logs_description": "Changes the log channel for messages.",
+	"message-logs_usage": "{prefix}message-logs #channel",
+	"add-role_description": "Adds a role to a member.",
+	"add-role_usage": "{prefix}add-role @role/id @member/id",
+	"ban_description": "Bans a member form the server",
+	"ban_usage": "{prefix}ban @someone",
+	"clear_description": "Clears the chat messages at once.",
+	"clear_usage": "{prefix}clear or {prefix}clear [number of messages]",
+	"clear-nick_description": "Clears the nickname of a member.",
+	"clear-nick_usage": "{prefix}clear-nick @someone",
+	"disable_description": "Disables a command in the bot.",
+	"disable_usage": "{prefix}disable [command name]",
+	"enable_description": "Enables a disabled command in the bot.",
+	"enable_usage": "{prefix}enable [command name]",
+	"hide_description": "Hides a channel from the everyone role.",
+	"hide_usage": "{prefix}hide #channel or {prefix}hide",
+	"kick_description": "Kicks a member from the server.",
+	"kick_usage": "{prefix}kick @someone",
+	"lock_description": "Locks the chat and disables send messages permissions from everyone.",
+	"lock_usage": "{prefix}lock or {prefix}lock #channel",
+	"move_description": "Moves a member from the voice channel to another voice channel.",
+	"move_usage": "{prefix}move @someone #channel/id",
+	"mute_description": "Mutes a member in the server.",
+	"mute_usage": "{prefix}mute @someone",
+	"remove-role_description": "Removes a role from the member.",
+	"remove-role_usage": "{prefix}remove-role @role/id @member",
+	"remove-warn_description": "Removes a warn from the member.",
+	"remove-warn_usage": "{prefix}remove-warn [warn id] [member]",
+	"restrict_description": "Restricts a command to specific channel (it will only run in the selected channels).",
+	"restrict_usage": "{prefix}restrict [command/all] #channel",
+	"set-color_description": "Sets/Changes the color of a role.",
+	"set-color_usage": "{prefix}set-color [role/id] color",
+	"set-mute-role_description": "Sets the mute role that members are gonna get when they get muted.",
+	"set-mute-role_usage": "{prefix}set-mute-role @role/id",
+	"set-nick_description": "Sets/Changes the nickname of members.",
+	"set-nick_usage": "{prefix}set-nick @someone nickname",
+	"set-prefix_description": "Changes the prefix of the bot.",
+	"set-prefix_usage": "{prefix}set-prefix NewPrefix",
+	"unban_description": "Revokes the ban from a banned member.",
+	"unban_usage": "{prefix}unban [user/id]",
+	"unhide_description": "Lets everyone see the selected channel (if hidden).",
+	"unhide_usage": "{prefix}unhide #channel or {prefix}unhide",
+	"unlock_description": "Unlocks the channel and lets everyone send messages there.",
+	"unlock_usage": "{prefix}unlock #channel or {prefix}unlock",
+	"unmute_description": "Removes the mute role from someone.",
+	"unmute_usage": "{prefix}unmute @someone",
+	"unrestrict_description": "Removes the stricts from a command then the command will run everywhere.",
+	"unrestrict_usage": "{prefix}unrestrict [command/all] ",
+	"unvmute_description": "Removes the voice mute from a member.",
+	"unvmute_usage": "{prefix}unvmute @someone",
+	"vkick_description": "Kicks a member from the voice channel.",
+	"vkick_usage": "{prefix}vkick @someone",
+	"vmute_description": "Mutes a member from speaking in the voice channel.",
+	"vmute_usage": "{prefix}vmute @someone",
+	"warn_description": "Gives the selected member a warn.",
+	"warn_usage": "{prefix}warn @someone [reason(optional)]",
+	"warns_description": "Shows the current warns of a member.",
+	"warns_usage": "{prefix}warns @someone"
 }
