--- a/src/Bot/utils/Languages/english.json
+++ b/src/Bot/utils/Languages/english.json
@@ -627,5 +627,88 @@
 	"search_usage": "{prefix}search [song name]",
 	"seek_description": "Seeks to a certain time of the current playing song.",
 	"seek_usage": "{prefix}seek [time]",
-	"filter_description": "Changes the filter of the current playing song."
+	"filter_description": "Changes the filter of the current playing song.",
+	"filter_usage": "{prefix}filter [filter here] type {prefix}valid-filters to see the filters",
+	"shuffle_description": "Shuffles the queue.",
+	"shuffle_usage": "{prefix}shuffle",
+	"skip_description": "Skips the current playing song.",
+	"skip_usage": "{prefix}skip",
+	"speed_description": "Changes the speed of the current playing song.",
+	"speed_usage": "{prefix}speed [speed here]",
+	"stop_description": "Stops and ends the queue.",
+	"stop_usage": "{prefix}stop",
+	"valid-filters_description": "Shows the valid filters that you can use in the filter command.",
+	"valid-filters_usage": "{prefix}valid-filters",
+	"volume_description": "Changes/Shows the volume of the queue.",
+	"volume_usage": "{prefix}volume or {prefix}volume number%",
+	"bot-avatar_description": "Changes the bot avatar.",
+	"bot-avatar_usage": "{prefix}bot-avatar (and send the avatar with your message)",
+	"cache-rank_details": "Caches the rank of the current server.",
+	"cache-rank_usage": "{prefix}cache-rank",
+	"eval_description": "Runs the eval command.",
+	"eval_usage": "{prefix}eval [javascript statement]",
+	"list-files_description": "Shows the files of the bot.",
+	"list-files_usage": "{prefix}list-files [path]",
+	"restart_description": "Restarts the bot.",
+	"restart_usage": "{prefix}restart",
+	"dm_description": "Sends a direct message to someone.",
+	"dm_usage": "{prefix}dm @someone message",
+	"terminal_description": "Sends a message to the console(terminal).",
+	"termina_usage": "{prefix}terminal message",
+	"update-credits_description": "Updates the credits of a member.",
+	"update-credits_usage": "{prefix}update-credits [@someone] [new credits]",
+	"update-level_description": "Updates the level of a member.",
+	"update-level_usage": "{prefix}update-level [@someone] [new level]",
+	"update-xp_description": "Updates the exp points of a member.",
+	"update-xp_usage": "{prefix}update-xp [@someone] [new xp]",
+	"view-file_description": "Views a file of the bot.",
+	"view-file_usage": "{prefix}view-file path",
+	"test_description": "Only a test command.",
+	"test_usage": "{prefix}test",
+	"set-ai-chat-channel_description": "Changes the ai chat channel (reset or remove).",
+	"set-ai-chat-channel_usage": "{prefix}ai-chat-channel default or {prefix}ai-chat-channel #channel",
+	"avatar_description": "Shows the avatar of the member (user and guild avatar).",
+	"avatar_usage": "{prefix}avatar or {prefix}avatar @someone",
+	"badges_description": "Shoes the badges of a member.",
+	"badges_usage": "{prefix}badges or {prefix}badges @someone",
+	"banner_description": "Shows the banner of the member.",
+	"banner_usage": "{prefix}banner or {prefix}banner @someone",
+	"bot_description": "Shows the details about the bot.",
+	"bot_usage": "{prefix}bot",
+	"credits_description": "Shows the credits of you or another member.",
+	"credits_usage": "{prefix}credits or {prefix} @someone",
+	"daily_description": "Checks the time left for your daily.",
+	"daily_usage": "{prefix}daily",
+	"device_description": "Shows the device of a member.",
+	"device_usage": "{prefix}device or {prefix}device @someone",
+	"give_description": "Gives someone some of your credits.",
+	"give_usage": "{prefix}give @someone credits",
+	"help_description": "The help command",
+	"help_usage": "{prefix}help or {prefix}help command",
+	"id_description": "Shows the id of a member.",
+	"id_usage": "{prefix}id or {prefix}id @someone",
+	"invite_description": "Gets the invite button of the bot.",
+	"invite_usage": "{prefix}invite",
+	"invite-leaderboard_description": "Shows the invite leaderboard of the server.",
+	"invite-leaderboard_usage": "{prefix}invite-leaderboard",
+	"calculator_description": "Does math stuff.",
+	"calculator_usage": "{prefix}calculator [operation ex(10+2)]",
+	"move-me_description": "Moves you to another vc.",
+	"move-me_usage": "{prefix}move-me #channel/id/name etc",
+	"nightcore_description": "Nightcores a song and sends it in mp3 file.",
+	"nightcore_usage": "{prefix}nightcore [song name/url]",
+	"note_description": "Takes a note and sends it into your dms.",
+	"note_usage": "{prefix}note message (also you can send image with your message).",
+	"ping_description": "Shows the ping of the bot.",
+	"ping_usage": "{prefix}ping",
+	"server_description": "Shows details about the server.",
+	"server_usage": "{prefix}server",
+	"shorten-url_description": "Shortens a url.",
+	"shorten-url_usage": "{prefix}shorten-url url",
+	"upload-sticker_description": "Uploads the sticker in your message to your server.",
+	"upload-sticker_usage": "{prefix}upload-sticker (and send sticker in your message).",
+	"user_description": "Shows the member's advanced data.",
+	"user_usage": "{prefix}user or {prefix}user @someone",
+	"yt-mp3_description": "Converts a song to mp3 file and sends it in the chat (the bot has 8mb file upload limit tho, so don't use long songs, if your server has level 3 boost then it can upload 100mb).",
+	"yt-mp3_usage": "{prefix}yt-mp3 [song url or name]"
 }
