--- a/src/Bot/utils/Languages/english.json
+++ b/src/Bot/utils/Languages/english.json
@@ -472,7 +472,7 @@
 	"start-giveaway_usage": "{prefix}start-giveaway [channel] [time] [winner count] [prize] without the [] ofc",
 	"add-bot-join-role_description": "Adds a role to the bots once they join the server (won't effect the normal members, only for bots).",
 	"add-bot-join-role_usage": "{prefix}add-bot-join-role role",
-	"add-member-join-role": "Adds a role to the members once they join the server (only for members, this won't add the role for bots).",
+	"add-member-join-role_description": "Adds a role to the members once they join the server (only for members, this won't add the role for bots).",
 	"add-member-join-role_usage": "{prefix}add-member-join-role role",
 	"bot-join-roles_description": "Shows the bot join roles (roles that are gonna be given to bots once they join the server).",
 	"bot-join-roles_usage": "{prefix}bot-join-roles",
@@ -532,8 +532,8 @@
 	"boost-logs_usage": "{prefix}boost-logs #channel",
 	"channel-logs_description": "Changes the log channel for channels edits.",
 	"channel-logs_usage": "{prefix}channel-logs #channel",
-	"server-logs_description": "Changes the log channel for server edits.",
-	"server-logs_usage": "{prefix}server-logs #channel",
+	"guild-logs_description": "Changes the log channel for server edits.",
+	"guild-logs_usage": "{prefix}server-logs #channel",
 	"member-logs_description": "Changes the log channel for member updates.",
 	"member-logs_usage": "{prefix}member-logs #channel",
 	"role-logs_description": "Changes the log channel for role edits.",
@@ -603,6 +603,7 @@
 	"auto-play_description": "Toggles the auto play of the related songs.",
 	"auto-play_usage": "{prefix}auto-play",
 	"jump_description": "Jumps(skips) an amount of songs.",
+	"jump_usage": "{prefix}jump",
 	"lyrics_description": "Gets the lyrics of a song.",
 	"lyrics_usage": "{prefix}lyrics [song name]",
 	"now-playing_description": "Gets the current playing song and it's details.",
@@ -643,7 +644,7 @@
 	"volume_usage": "{prefix}volume or {prefix}volume number%",
 	"bot-avatar_description": "Changes the bot avatar.",
 	"bot-avatar_usage": "{prefix}bot-avatar (and send the avatar with your message)",
-	"cache-rank_details": "Caches the rank of the current server.",
+	"cache-rank_description": "Caches the rank of the current server.",
 	"cache-rank_usage": "{prefix}cache-rank",
 	"eval_description": "Runs the eval command.",
 	"eval_usage": "{prefix}eval [javascript statement]",
@@ -654,7 +655,7 @@
 	"dm_description": "Sends a direct message to someone.",
 	"dm_usage": "{prefix}dm @someone message",
 	"terminal_description": "Sends a message to the console(terminal).",
-	"termina_usage": "{prefix}terminal message",
+	"terminal_usage": "{prefix}terminal message",
 	"update-credits_description": "Updates the credits of a member.",
 	"update-credits_usage": "{prefix}update-credits [@someone] [new credits]",
 	"update-level_description": "Updates the level of a member.",
@@ -710,5 +711,7 @@
 	"user_description": "Shows the member's advanced data.",
 	"user_usage": "{prefix}user or {prefix}user @someone",
 	"yt-mp3_description": "Converts a song to mp3 file and sends it in the chat (the bot has 8mb file upload limit tho, so don't use long songs, if your server has level 3 boost then it can upload 100mb).",
-	"yt-mp3_usage": "{prefix}yt-mp3 [song url or name]"
+	"yt-mp3_usage": "{prefix}yt-mp3 [song url or name]",
+	"translate_description": "Translates your message to another language.",
+	"translate_usage": "{prefix}translate [content] or {prefix} translate content -language (language is from 2 letters, example: en)"
 }
